# mp-weixin-to-md

./: .gitignore  README.md  pyproject.toml
examples/: minimal.html
src/mp_weixin_to_md/: __init__.py  assets.py  cli.py  fetch.py  markdown.py  parser.py
tests/: test_parser_markdown.py
